Fix intro text and headline spacing and font-size

--- a/src/styles/global/hero.scss
+++ b/src/styles/global/hero.scss
@@ -39,3 +39,12 @@
     text-decoration: none;
   }
 }
+
+.intro-text {
+  @include media_max_break(md) {
+    font-size: 17px;
+    line-height: 30px;
+  }
+  font-size: 22px;
+  line-height: 40px;
+}
